--- a/21.工厂模式：简单工厂.html
+++ b/21.工厂模式：简单工厂.html
@@ -10,7 +10,7 @@
 <body>
 <script type=text/javascript charset=utf-8>
 //实现卖不同的车
-// 细粒度和粗粒度 工厂模式在原来CarShop的基础上细分
+// 简单工厂模式调用工厂单例模式的生产方法
 // --------------------------------------------------------
 	// 卖车的商店
 	function CarShop(){};
