--- a/21.工厂模式：简单工厂.html
+++ b/21.工厂模式：简单工厂.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 <script type=text/javascript charset=utf-8>
+
+/*工厂模式：核心就是为了生产对象，实现解耦
+对于javaScript而言，一个类或对象中往往会包含别的对象，我们创建这样成员对象时，可能习惯采用new关键字或构造函数的方式，这样会导致两个类之间产生依赖关系，所以我们通常要需要工厂模式，创建一个工厂来管理他们的实例过程
+*/
+
 //实现卖不同的车
 // 简单工厂模式调用工厂单例模式的生产方法
 // --------------------------------------------------------
