--- a/2.实参arguments对象.html
+++ b/2.实参arguments对象.html
@@ -29,13 +29,23 @@
 
 	
 
-	//arguments对象 用的最多的还是递归操作 arguments.callee 
+	//arguments对象 用的最多的还是递归操作
+	//arguments.callee指向函数自己本身(指向当前函数体)
     function fact(num){
-			if(num <=1) return 1 ;
-			else  return num*arguments.callee(num-1); //这里不用num*fact(num-1)避免存在的bug
-		}
+		if(num <=1) return 1 ;
+		else  return num*arguments.callee(num-1); //这里不用num*fact(num-1)避免存在的bug
+	}
 
-			
+// ------------------------------------------------------
+	// 递归不用arguments.callee调用函数自己本身的bug
+	function fact2(num){
+		if(num <=1) return 1 ;
+		else  return num*fact2(num-1);
+	}
+	var F = fact2; //继承
+	fact2 = null; //fact2被覆盖，下面的alert会报错fact2 is not a function，用arguments.callee调用本身则不会报错
+	alert(F(5));
+
 </script>
 </head>
 <body>
