--- a/32.代理模式：控制本体的实例化时机.html
+++ b/32.代理模式：控制本体的实例化时机.html
@@ -76,8 +76,7 @@
 			}
 		};				
 		
-		//实例化的是代理对象：推迟本体对象实例化的时间，什么时候具体去做事情了，再去实例化它
-		// hibernate： get(全查询出来)   load(返回代理对象)
+		//实例化的是代理对象：推迟本体对象实例化的时间，用到的时候才实例化它(这样可以避免直接加载很大程度上可以优化性能)
 		var proxy = new LibraryProxy({
 			"01":new Book('01','javascript','z3'),
 			"02":new Book('02','java','z4')
